# yolov26-object-detection-gpu

./: .gitignore
PARTE1A/: Makefile  Parte1A.ipynb  main.cpp  resultados_segmentacion.csv  yolo_seg
PARTE1B-ARIELPALTAN/deteccion/: Makefile  main.cpp  yolo_bench
PARTE1B-ARIELPALTAN/deteccion/resultados/: yolo_benchmark.csv
PARTE1B-ARIELPALTAN/super-resolucion/: Makefile  main.cpp  realesrgan_bench
PARTE1B-ARIELPALTAN/super-resolucion/resultados/: superres_benchmark.csv
PARTE1C-ARIELPALTAN/: Makefile  main.cpp  parte1c
PARTE1C-ARIELPALTAN/resultados/: resultados_parte_1c.csv  resumen_parte_1c.txt
PARTE1C-DIEGOBRAVO/: Makefile
PARTE1C-DIEGOBRAVO/Parte1C-BravoD/: main.cpp  resultados_parte_1c.csv  resumen_parte_1c.txt
PRACTICA1B-DIEGOBRAVO/PARTE1B(A)/: CMakeLists.txt  Makefile
PRACTICA1B-DIEGOBRAVO/PARTE1B(A)/include/: Benchmark.hpp  OutputParser.hpp  SystemMonitor.hpp  Utils.hpp  YoloDetector.hpp
PRACTICA1B-DIEGOBRAVO/PARTE1B(A)/results/: comparison_table.md  yolo_benchmark.csv  yolo_benchmark.json
PRACTICA1B-DIEGOBRAVO/PARTE1B(A)/src/: Benchmark.cpp  OutputParser.cpp  SystemMonitor.cpp  Utils.cpp  YoloDetector.cpp  main.cpp
PRACTICA1B-DIEGOBRAVO/PARTE1B(B)/: Makefile  main.cpp  realesrgan_video
